--- a/_posts/2021-12-16-include.md
+++ b/_posts/2021-12-16-include.md
@@ -7,10 +7,10 @@ date: 2021-12-16
 ## La Fundación GoodJob
 
 La Fundación GoodJob desarrolla el Programa #Include con el objetivo de formar en seguridad informática a personas con discapacidad.
-Se trata de un programa de empleabilidad gratuito, que se desarrollará de forma online, destinado a desarrollar competencias en el sector de la ciberseguridad, 
+Se trata de un programa de empleabilidad gratuito, que se desarrolla de forma online, destinado a desarrollar competencias en el sector de la ciberseguridad, 
 una de las profesiones más innovadoras y con más demanda de empleo en la actualidad.
 
-El Programa #Include cuanta con la colaboración de varias instituciones:
+El Programa #Include cuenta con la colaboración de varias instituciones:
 
 - El Instituto Nacional de Ciberseguridad
 - El Centro Criptológico Nacional
