--- a/_posts/2022-01-01-nmap.md
+++ b/_posts/2022-01-01-nmap.md
@@ -13,8 +13,8 @@ Nmap viene instalado por defecto en Kali Linux.
 ## Port Scanner
 
 Como hemos mencionado, con Nmap podemos ver que puertos están abiertos en un determinado host, y ver que servicios se están ejecutando.
-Existen un total de 65536 puertos, que van desde el 0 al 65535. Los puertos que van desde el 0 al 1023 son los puertos bien conocidos (en inglés, well-known port).
-Existe un estándar de asignación de puertos, que los divide en tres grupos:
+Existen un total de 65536 puertos, que van desde el 0 al 65535. Los puertos que van desde el 0 al 1023 son los puertos bien conocidos (en inglés, well-known ports).
+Existe un estándar de asignación de puertos que los divide en tres grupos:
 
 - 0 - 1023. Están reservados para el sisteman operativo y los protocolos más importantes. Por ejemplo 21 FTP, 22 SSH, 80 HTTP.	
 - 1024 - 49151. Son los puertos registrados, los que se utilizan por las aplicaciones que se instalan en el ordenador.
@@ -59,6 +59,8 @@ seguido del nombre del archivo de salida.
 - Salida XML (-oX).
 - Salida grepeable (-oG).
 - Salida en todos los formatos (-oA).
+
+Nmap tiene una infinidad de opciones que aquí no os he mostrado. Si quieres seguir investigando sobre esta herramienta te dejo por aquí el enlace a su página oficial, [nmap](https://nmap.org/).
 
 
 
