--- a/_posts/2022-01-01-nmap.md
+++ b/_posts/2022-01-01-nmap.md
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: splash
 title: "Nmap y pa' dentro"
 excerpt: "Uso y ejemplos de la herramienta Nmap" 
 date: 2022-01-01
@@ -27,28 +27,29 @@ puertos y servicios se están ejecutando en la máquina vulnerable Metasploitabl
 
 Ejecuta el comando `ip a` o `ifconfig` desde la terminal en cada una de las máquinas para ver la dirección IP asignada.
 
-<p><center><img src="../assets/images/nmap/ip-kali.png"></center></p>
-<p><center><img src="../assets/images/nmap/ip-metasploitable.png"></center></p>
+<img src="../assets/images/nmap/ip-kali.png">
+
+<img src="../assets/images/nmap/ip-metasploitable.png">
 
 Ahora tenemos las IPs de nuestras máquinas, en mi caso la 10.0.2.15 para Kali y la 10.0.2.5 para Metasploitable2.
 
 El escaneo más básico para el reconocimiento de puertos con nmap es el comando `nmap ip_objetivo`.
 
-<p><center><img src="../assets/images/nmap/nmap-basic.png"></center></p>
+<img src="../assets/images/nmap/nmap-basic.png">
 
 Podemos observar en la parte inferior derecha el tiempo que tomó nmap para el escaneo de puertos: 13.09s. Ahora bien, con el parámetro `-n` de nmap podemos reducir el tiempo de scaneo. Este parámetro hace
 que nmap no realice resolución DNS lo que reduce bastante el tiempo.
 
-<p><center><img src="../assets/images/nmap/nmap-n.png"></center></p>
+<img src="../assets/images/nmap/nmap-n.png">
 
 De forma predeterminada nmap solo escanea los 1000 puertos más comunes para cada protocolo. Con el parámetro `-p` podemos indicar qué puertos queremos escanear separados por coma. Para indicar que queremos escanear todos los puertos
 podemor ejecutar `nmap -n -p- ip_objetivo`.
 
-<p><center><img src="../assets/images/nmap/nmap-allports.png"></center></p>
+<img src="../assets/images/nmap/nmap-allports.png">
 
 Para ver las versiones de los servicios que se están ejecutando usamos el parámetro `-sV`
 
-<p><center><img src="../assets/images/nmap/nmap-versiones.png"></center></p>
+<img src="../assets/images/nmap/nmap-versiones.png">
 
 Ahora Nmap muestra otra columna "VERSION", con información de las versiones de los servicios. Esta información es muy valiosa para ver versiones vulnerables de los servicos que se ejecutan.
 
