--- a/_posts/2022-01-01-nmap.md
+++ b/_posts/2022-01-01-nmap.md
@@ -1,7 +1,7 @@
 ---
 layout: splash
-title: "Nmap y pa' dentro"
-excerpt: "Uso y ejemplos de la herramienta Nmap" 
+title: "Nmap"
+excerpt: "Uso y ejemplos de la herramienta Nmap. Escaneos de red con Nmap" 
 date: 2022-01-01
 classes: wide
 ---
