--- a/_posts/2022-06-01-fuzzing.md
+++ b/_posts/2022-06-01-fuzzing.md
@@ -1,13 +1,12 @@
 ---
 layout: splash
 title: "Fuzzing Aplicaciones Web"
-excerpt: "Fuzzing" 
+excerpt: "Fuzzing. Fuerza bruta contra directorios Herramientos para el descubrimiento de rutas en aplicaciones web" 
 date: 2022-06-01
 classes: wide
 ---
 
-
-# Fuzzing Web
+## Fuzzing Web
 
 El fuzzing de aplicaciones web es un proceso automatizado para averiguar si una entrada proporcionada genera un resultado exitoso o extraño (la aplicación no se comporta
 como debe). Esto ayudará a un atacante a averiguar, por ejemplo, que rutas existen dentro de una aplicación web.
