--- a/_posts/2021-12-16-include.md
+++ b/_posts/2021-12-16-include.md
@@ -3,6 +3,8 @@ layout: single
 title: "Programa #Include"
 excerpt: "Conoce el programa #Include creado por la Fundación GoodJob." 
 date: 2021-12-16
+tags:
+  - Include
 ---
 ## La Fundación GoodJob
 
