--- a/_posts/2022-01-01-nmap.md
+++ b/_posts/2022-01-01-nmap.md
@@ -4,6 +4,10 @@ title: "Nmap"
 excerpt: "Uso y ejemplos de la herramienta Nmap. Escaneos de red con Nmap" 
 date: 2022-01-01
 classes: wide
+tags:
+  - Network Scanning
+  - Herramientas
+  - Pentesting
 ---
 ## ¿ Qué es Nmap ?
 
