--- a/_posts/2022-06-01-fuzzing.md
+++ b/_posts/2022-06-01-fuzzing.md
@@ -4,6 +4,10 @@ title: "Fuzzing Aplicaciones Web"
 excerpt: "Fuzzing. Fuerza bruta contra directorios Herramientos para el descubrimiento de rutas en aplicaciones web" 
 date: 2022-06-01
 classes: wide
+tags:
+  - Hacking Web
+  - Herramientas
+  - Pentesting
 ---
 
 ## Fuzzing Web
