--- a/_posts/2022-01-01-nmap.md
+++ b/_posts/2022-01-01-nmap.md
@@ -1,7 +1,7 @@
 ---
 layout: splash
-title: "Nmap"
-excerpt: "Uso y ejemplos de la herramienta Nmap. Escaneos de red con Nmap" 
+title: "Escaneo de puertos con Nmap"
+excerpt: "Uso y ejemplos de la herramienta Nmap. Escaneos de red con Nmap"
 date: 2022-01-01
 classes: wide
 tags:
@@ -9,7 +9,8 @@ tags:
   - Herramientas
   - Pentesting
 ---
-## ¿ Qué es Nmap ?
+<br/>
+# ¿ Qué es Nmap ?
 
 Namp (Network Mapper) es una herramienta gratuita y multiplataforma para mapear redes en busca hosts activos, puertos abiertos y servicios corriendo.
 Nmap viene instalado por defecto en Kali Linux.
@@ -31,29 +32,29 @@ puertos y servicios se están ejecutando en la máquina vulnerable Metasploitabl
 
 Ejecuta el comando `ip a` o `ifconfig` desde la terminal en cada una de las máquinas para ver la dirección IP asignada.
 
-<img src="../assets/images/nmap/ip-kali.png">
+<img src="../assets/images/nmap/ip-kali.png" alt="ipkali">
 
-<img src="../assets/images/nmap/ip-metasploitable.png">
+<img src="../assets/images/nmap/ip-metasploitable.png" alt="ipmetasploitable">
 
 Ahora tenemos las IPs de nuestras máquinas, en mi caso la 10.0.2.15 para Kali y la 10.0.2.5 para Metasploitable2.
 
 El escaneo más básico para el reconocimiento de puertos con nmap es el comando `nmap ip_objetivo`.
 
-<img src="../assets/images/nmap/nmap-basic.png">
+<img src="../assets/images/nmap/nmap-basic.png" alt="nmap basic">
 
 Podemos observar en la parte inferior derecha el tiempo que tomó nmap para el escaneo de puertos: 13.09s. Ahora bien, con el parámetro `-n` de nmap podemos reducir el tiempo de scaneo. Este parámetro hace
 que nmap no realice resolución DNS lo que reduce bastante el tiempo.
 
-<img src="../assets/images/nmap/nmap-n.png">
+<img src="../assets/images/nmap/nmap-n.png" alt="nmap n">
 
 De forma predeterminada nmap solo escanea los 1000 puertos más comunes para cada protocolo. Con el parámetro `-p` podemos indicar qué puertos queremos escanear separados por coma. Para indicar que queremos escanear todos los puertos
 podemor ejecutar `nmap -n -p- ip_objetivo`.
 
-<img src="../assets/images/nmap/nmap-allports.png">
+<img src="../assets/images/nmap/nmap-allports.png" alt="nmap allports">
 
 Para ver las versiones de los servicios que se están ejecutando usamos el parámetro `-sV`
 
-<img src="../assets/images/nmap/nmap-versiones.png">
+<img src="../assets/images/nmap/nmap-versiones.png" alt="nmap versiones">
 
 Ahora Nmap muestra otra columna "VERSION", con información de las versiones de los servicios. Esta información es muy valiosa para ver versiones vulnerables de los servicos que se ejecutan.
 
