--- a/_posts/2022-06-01-fuzzing.md
+++ b/_posts/2022-06-01-fuzzing.md
@@ -26,7 +26,7 @@ de este [enlace](https://github.com/maurosoria/dirsearch).
 
 Una vez clonado el repositorio nos metemos dentro del directorio y vemos la ayuda de la herramienta.
 
-<img src="../assets/images/dirsearch/ayuda.png">
+<img src="../assets/images/dirsearch/ayuda.png" alt="ayuda de dirsearch"> 
 
 De entre las opciones que ofrece dirsearch, podemos indicar un diccionario personalizado, extensiones, buśqueda recursiva, establecer cookies...
 La forma más básica de ejecutar la herramienta es ```./dirsearch -u http://ip ```
@@ -38,11 +38,11 @@ en Kali Linux.
 
 Con el comando ```wfuzz -h``` podemos visualizar la ayuda.
 
-<img src="../assets/images/dirsearch/wfuzz.png">  
+<img src="../assets/images/dirsearch/wfuzz.png" alt="wfuzz">  
 
 El siguiente ejemplo de wfuzz obtiene como resultado dos directorios, manual y secret.
 
-<img src="../assets/images/dirsearch/wfuzz2.png">
+<img src="../assets/images/dirsearch/wfuzz2.png" alt="wfuzz 2">
 
 Donde:
 
@@ -58,15 +58,15 @@ Donde:
 Por último vamos a ver la herramienta <strong>gobuster</strong>. Podemos instalar gobuster con el comando ```sudo apt install gobuster```. Ejecutamos la ayuda para ver qué opciones
 nos ofrece la herramienta.
 
-<img src="../assets/images/dirsearch/gobuster.png">
+<img src="../assets/images/dirsearch/gobuster.png" alt="gobuster">
 
 Gobuster nos ofrece la posiblidad de buscar directorios y ficheros ocultos mediante la opción dir. Para ver qué opciones nos ofrece este modo podemos ejecutar su ayuda.
 
-<img src="../assets/images/dirsearch/gobuster3.png">
+<img src="../assets/images/dirsearch/gobuster3.png" alt="gobuster">
 
 El siguiente comando de gobuster obtiene como resultado los ficheros login.php y secret.txt.
 
-<img src="../assets/images/dirsearch/gobuster2.png">
+<img src="../assets/images/dirsearch/gobuster2.png" alt="gobuster">
 
 Donde:
 
